[package]
name = "x25519_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly port of X25519"
repository = "https://github.com/hazae41/x25519.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["getrandom", "static_secrets"] }
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }
memory_wasm = { path = "../../node_modules/@hazae41/memory.wasm/dist/wasm"}
